# greed

./: README.md  index.html  package-lock.json  package.json
math/src/greed-py/: README.md  dose_tiers_output.json  pyproject.toml
math/src/greed-py/dose_analysis/: dose_analysis_cy.c  dose_analysis_cy.cpp  dose_analysis_cy.pyx  greed.py  main.py  setup.py
src/: App.tsx  data.ts  index.css  types.ts
src/components/: DosageChart.tsx  SubstanceSelector.tsx
